--- a/MyContentProvider/AndroidManifest.xml
+++ b/MyContentProvider/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-	    <provider android:name="MyContentProvider" android:authorities="sak.provider.mycontentprovider" />
+	    <provider android:name="MyContentProvider" android:authorities="sak.provider.mycontent" />
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
