--- a/MyContentProvider/AndroidManifest.xml
+++ b/MyContentProvider/AndroidManifest.xml
@@ -5,11 +5,23 @@
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 	    <provider android:name="MyContentProvider" android:authorities="sak.provider.mycontent" />
-        <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+        <activity android:name=".MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".LiveFolderActivity" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.CREATE_LIVE_FOLDER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".DetailActivity" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="vnd.android.cursor.item/vnd.sak.provider.mycontent" />
             </intent-filter>
         </activity>
     </application>
